🚀 feat: finalisation globale de l'application Pokédoums
⚖️ Ajout de la fonctionnalité de comparaison de Pokémon avec calcul de moyenne et indicateurs visuels.
🌗 Intégration du mode sombre/clair persistant sur toutes les pages (index, détails, comparaison).
🔍 Mise en place de la recherche dynamique avec raccourci clavier Ctrl+K.
⌨️ Optimisation de l'accessibilité avec navigation par flèches directionnelles et focus clavier.
📋 Création du fichier README.md détaillé avec la structure et les commandes du projet.
✨ Harmonisation du design CSS et nettoyage des fichiers de configuration.

--- a/compare.html
+++ b/compare.html
@@ -1,17 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pokédoums - Comparaison</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pokédoums</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <div id="compare-app"></div>
+    <script type="module" src="/src/compare.ts"></script>
   </body>
 </html>
